# datamatrix-rs

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
examples/: ascii.rs  decode.rs  eps.rs  image.rs  pdf.rs  string.rs  svg.rs  typst.rs  unicode.rs
extra/: gf.py  symbol_placement.c
proptest-regressions/encodation/: proptests.txt
src/: data.rs  lib.rs  placement.rs  raw.rs  symbol_size.rs
src/decodation/: eci.rs  input1.raw  mod.rs  tests.rs
src/encodation/: ascii.rs  base256.rs  c40.rs  edifact.rs  encodation_type.rs  look_ahead.rs  mod.rs  proptests.rs  tests.rs  text.rs  x12.rs
src/encodation/planner/: ascii.rs  base256.rs  c40.rs  edifact.rs  frac.rs  generic.rs  mod.rs  shortest_path.rs  text.rs  x12.rs
src/errorcode/: correction.rs  galois.rs  mod.rs
src/errorcode/decoding/: fpgz.rs  mod.rs  pgz.rs  syndrome_based.rs
src/placement/: path.rs
