[package]
name = "datamatrix"
version = "0.1.0-beta.2"
authors = ["Jannik Schürg <jannik.schuerg+crates@posteo.de>"]
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "Data Matrix (ECC 200) decoding and encoding with an optimizing encoder"
repository = "https://github.com/jannschu/datamatrix-rs/"
categories = ["encoding"]
keywords = ["codematrix", "datamatrix"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
extended_eci = ["encoding_rs"]

[dependencies]
arrayvec = "0.5"
encoding_rs = { version = "0.8", optional = true }

[dev-dependencies]
image = "0.23"
printpdf = { path = "../printpdf" }