[package]
name = "datamatrix"
version = "0.2.1"
authors = ["Jannik Schürg <jannik.schuerg+crates@posteo.de>"]
edition = "2018"
readme = "README.md"
license = "Apache-2.0 OR MIT"
description = "Data Matrix (ECC 200) decoding and encoding with an optimizing encoder"
repository = "https://github.com/jannschu/datamatrix-rs/"
categories = ["encoding"]
keywords = ["codematrix", "datamatrix", "semacode", "no_std"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
extended_eci = ["encoding_rs"]

[dependencies]
arrayvec = "0.7"
flagset = "0.4"
encoding_rs = { version = "0.8", optional = true }

[dev-dependencies]
image = "0.23"
printpdf = "0.4"