[package]
name = "datamatrix"
version = "0.3.2"
authors = ["Jannik Schürg <jannik.schuerg+crates@posteo.de>"]
edition = "2021"
readme = "README.md"
license = "Apache-2.0 OR MIT"
description = "Data Matrix (ECC 200) decoding and encoding with an optimizing encoder"
repository = "https://github.com/jannschu/datamatrix-rs/"
categories = ["encoding"]
keywords = ["codematrix", "datamatrix", "semacode", "no_std"]
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
extended_eci = ["encoding_rs"]

[dependencies]
arrayvec = { version = "0.7", default-features = false }
flagset = "0.4"
encoding_rs = { version = "0.8", optional = true }

[dev-dependencies]
image = "0.25"
printpdf = "0.7"
qrcode = "0.14.0"
enum-iterator = "2"
pretty_assertions = "1.1"
